# teraoka-frappe-integration

./: README.md  pyproject.toml
scripts/scratch/: sftp_test.py  sftp_test2.py  test_ns_sync.py
teraoka_integration/: hooks.py  modules.txt  test_integration.py
teraoka_integration/teraoka_integration/: api.py  demo.py  ftp.py  invoice.py  parser.py  process.py
teraoka_integration/teraoka_integration/dashboard/dashboard/: teraoka_dashboard.json
teraoka_integration/teraoka_integration/dashboard/dashboard_chart/: teraoka_processed_files.json  teraoka_sync_status.json
teraoka_integration/teraoka_integration/dashboard/teraoka_analytics/: teraoka_analytics.json
teraoka_integration/teraoka_integration/dashboard_chart/teraoka_sales_by_shop/: teraoka_sales_by_shop.json
teraoka_integration/teraoka_integration/dashboard_chart/teraoka_sales_trend/: teraoka_sales_trend.json
teraoka_integration/teraoka_integration/doctype/netsuite_sync_log/: netsuite_sync_log.js  netsuite_sync_log.json  netsuite_sync_log.py
teraoka_integration/teraoka_integration/doctype/teraoka_file_log/: teraoka_file_log.js  teraoka_file_log.json  teraoka_file_log.py  teraoka_file_log_list.js  test_teraoka_file_log.py
teraoka_integration/teraoka_integration/doctype/teraoka_file_log_detail/: teraoka_file_log_detail.json  teraoka_file_log_detail.py
teraoka_integration/teraoka_integration/page/teraoka_hub/: teraoka_hub.css  (+3 more)
teraoka_integration/teraoka_integration/services/: api.py  ftp.py  google_chat.py  invoice.py  mapper.py  netsuite.py  parser.py  process.py  queue_manager.py  splitter.py
(+12 files in other folders)
